--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html>
 	<head>
 		<title>Drop Box Demo</title>
+		<link href="style/main.css" type="text/css"/>
+		<style>
+			.box {
+				width:50px;
+				height:20px;
+				background-color:#000;
+				border:1px solid #111;
+				position:absolute;
+				top:0;left:60px;
+			}
+			.start_bn{
+				top:120px;
+				left:120px;
+				width:60px;
+				height:60px;
+				position:absolute;
+				background-color:#666;
+				border:1px solid #000;
+			}
+		</style>
 		<script src="script/all.js" charset="UTF-8"></script>
 	</head>
 	<body>
 		<div class="page-header">
 		</div>
-		<canvas id="cvs" style="background-color: #333;width: 260px;height: 460px;"></canvas>
+		<canvas id="cvs"></canvas>
+		<div class="start_bn" onclick="create()"></div>
 		<div class="page-footer">
 		</div>
 	</body>
